# Projet-NLP-Recherche-Documentaire

./: .gitignore  CMakeLists.txt  Projet_recherche_documentaire.docx  README.md  project.sh  queries.txt
AP/: AP891216  AP891217  AP891218  AP891219  AP891220  AP891221  AP891222  AP891223  AP891224  AP891225  AP891226  AP891227  AP891228  AP891229  AP891230  AP891231
src/: BTree.cc  BTree.hh  BTreeNode.cc  BTreeNode.hh  BTrees.cc  BTrees.hh  Document.cc  Document.hh  Documents.cc  Documents.hh  Forest.cc  Forest.hh  NLP.cc  NLP.hh  Query.cc  Query.hh  SpellingCorrector.cc  SpellingCorrector.hh  Word.cc  Word.hh  main.cpp  mainwindow.cpp  mainwindow.hh  mainwindow.ui
